TEST_PROGRAMS/VALID/05/func_decs_long.go
/* Function declarations. */

package main

// Long form
func f1(a float64, b float64, s string) string {
	return s
}

func main() {
	// Do nothing
}
