TEST_PROGRAMS/INVALID/09/missing_return.go
package missing_return

func main() {
    plus(1, 2)
}

func plus(a, b int) int {
    return 1
    a + b
}
